<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Andrew Reitz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_name">Encrypted Camera</string>
    <string name="settings_title">Encrypted Camera Settings</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="do_not_loose_password">Do not loose this password!</string>
    <string name="images_unencryped_message">Your images are unencrypted</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="pref_key_decrypt">pref_key_decrypt</string>
    <string name="pref_key_use_password">pref_key_use_password</string>
    <string name="require_password_to_access_files">Require a password</string>
    <string name="use_password">Use Password</string>
    <string name="photos_storage">Photos Storage</string>
    <string name="show_photos_in_sd_card">Show photos in SD Card</string>
    <string name="decrypt_photos">Decrypt Photos</string>
    <string name="photo_retrieval">Photo Retrieval</string>
    <string name="passwords_not_match">Passwords did not match</string>
    <string name="password_can_not_be_empty">Password can not be empty</string>
    <string name="error_saving_encryption_key">There was an error saving the encryption key.  Your phone does not appear to support the encryption algorithm used</string>
    <string name="encryption_error">Encryption Error</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error">Error</string>
    <string name="error_no_image_recieved">I\'m sorry, but there was an issue receiving the image from the camera</string>
    <string name="error_sdcard_title">SDCard Error</string>
    <string name="error_sdcard_message">There was an error trying to write to the sdcard. Please check that it is mounted and try again</string>
    <string name="error_no_camera_app_found_message">This application is build to use your default camera, but you do not seem to have on installed.  Please install a camera application and then try this app again</string>
    <string name="error_no_camera_app">No Camera App</string>
    <string name="error_encrypting_image_message">Well this is embarrassing but there was an error saving your image!</string>
    <string name="error_reencrypting">There was a problem encrypting the file %s! To ensure security you should delete it off your sdcard immediately</string>
    <string name="error_unable_to_decrypt_to_sd">Unable to write the encrypted files to your sdcard</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_terrible">A terrible error occurred, please try again</string>
    <string name="error_change_password_while_decrypted">Can not change password while images are decrypted</string>
    <string name="error_encrypting">Error Encrypting</string>
    <string name="error_encrypting_photo">There was an error encrypting your photo</string>
    <string name="error_currently_encrypting">Settings can not be changed at this time. Images are currently being encrypting</string>
    <string name="error_currently_decrypting">Settings can not be changed at this time. Images are currently being decrypted</string>
    <string name="donate">Donate</string>
    <string name="about">About</string>
    <string name="photos">Photos</string>
    <string name="pref_key_gallery">pref_key_gallery</string>
    <string name="first_run_paragraph1">This application is a little different than your normal application. It has two launchers. One for the settings and one for launching the camera. The camera is your default camera app, just wrapped by this application so that all output is encrypted when saved. To access your decrytped files on the SdCard look in EncryptedCamera folder</string>
    <string name="launcher_image_content_description">Launchers Side By Side</string>
    <string name="first_run_paragraph2">This application is build pretty securely, but as with anything nothing is completely safe. I encourage you to set a password if you are really worried. <strong>If you loose this password there is nothing that can be done, your images will be lost!</strong></string>
    <string name="first_run_paragraph3">Check out <a href="https://github.com/pieces029/encrypted-camera">github</a> to help contribute, report bugs, see how the encryption is done, etc. Launcher icons provided by the lovely <a href="https://plus.google.com/110832905322329574902/posts">Andrea Sittler</a></string>
    <string name="pref_key_version">pref_key_version</string>
    <string name="got_it">Got It!</string>
    <string name="gallery">Gallery</string>
    <string name="view_unencrypted_images">View Unencrypted Images</string>
    <string name="view_source">View Source</string>
    <string name="view_source_summary">Help make this app better! Report a bug or view the source on GitHub</string>
    <string name="donate_summary">Thanks for downloading this application! Hope you like it.</string>
    <string name="encrypting_your_photos">Encrypting your photos</string>
    <string name="decrypting_files">Decrypting Files</string>
    <string name="encrypting_files">Encrypting Files</string>
    <string name="Other">Other</string>
    <string name="pref_key_about">pref_key_about</string>
    <string name="learn_more">Learn More</string>
    <string name="first_run_main_text">This app has two launchers, one for the settings and one for the camera. This is so you can quickly get to the camera when you need it.</string>
    <string name="welcome">Welcome</string>
    <string name="warning">Warning!</string>
    <string name="leaving_app_message">You are about to leave %s. Be careful which apps you share these photos with. They my save them in places you don\'t want!</string>
</resources>
